force-app/main/default/objects/Temporal_Cursos__c/Temporal_Cursos__c.object-meta.xml
<CustomObject>
    <description>Tabla temporal para cargar cursos BBDD</description>
    <label>Temporal Curso</label>
    <nameField>
        <label>Temporal Curso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Cursos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>