force-app/main/default/objects/Temporal_Cursos__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Temporal Cursos (Benefit)</relationshipLabel>
    <relationshipName>Temporal_Cursos1</relationshipName>
    <type>Lookup</type>
</CustomField>