force-app/main/default/objects/Temporal_Cursos__c/fields/Benefit_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Schedule</label>
    <referenceTo>BenefitSchedule</referenceTo>
    <relationshipLabel>Temporal Cursos</relationshipLabel>
    <relationshipName>Temporal_Cursos</relationshipName>
    <type>Lookup</type>
</CustomField>