force-app/main/default/objects/Temporal_Cursos__c/fields/CORE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CORE_FLAG__c</fullName>
    <label>CORE_FLAG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>