force-app/main/default/objects/Temporal_Cursos__c/fields/CU_ANO__c.field-meta.xml
<CustomField>
    <fullName>CU_ANO__c</fullName>
    <label>CU_ANO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>