force-app/main/default/objects/Temporal_Cursos__c/fields/CU_CUENTA__c.field-meta.xml
<CustomField>
    <fullName>CU_CUENTA__c</fullName>
    <label>CU_CUENTA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>