force-app/main/default/objects/Temporal_Cursos__c/fields/CU_CURSO__c.field-meta.xml
<CustomField>
    <fullName>CU_CURSO__c</fullName>
    <label>CU_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>