force-app/main/default/objects/Temporal_Cursos__c/fields/CU_D_SEMANA__c.field-meta.xml
<CustomField>
    <fullName>CU_D_SEMANA__c</fullName>
    <label>CU_D_SEMANA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>