force-app/main/default/objects/Temporal_Cursos__c/fields/CU_DIASCUR__c.field-meta.xml
<CustomField>
    <fullName>CU_DIASCUR__c</fullName>
    <label>CU_DIASCUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>