force-app/main/default/objects/Temporal_Cursos__c/fields/CU_FECFIN__c.field-meta.xml
<CustomField>
    <fullName>CU_FECFIN__c</fullName>
    <label>CU_FECFIN</label>
    <type>Date</type>
</CustomField>