force-app/main/default/objects/Temporal_Cursos__c/fields/CU_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>CU_FECHAS__c</fullName>
    <label>CU_FECHAS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>