force-app/main/default/objects/Temporal_Cursos__c/fields/CU_FECHAS_OK__c.field-meta.xml
<CustomField>
    <fullName>CU_FECHAS_OK__c</fullName>
    <label>CU_FECHAS_OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>