force-app/main/default/objects/Temporal_Cursos__c/fields/CU_FECHAS_RES__c.field-meta.xml
<CustomField>
    <fullName>CU_FECHAS_RES__c</fullName>
    <label>CU_FECHAS_RES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>