force-app/main/default/objects/Temporal_Cursos__c/fields/CU_FECINI__c.field-meta.xml
<CustomField>
    <fullName>CU_FECINI__c</fullName>
    <label>CU_FECINI</label>
    <type>Date</type>
</CustomField>