force-app/main/default/objects/Temporal_Cursos__c/fields/CU_HRSDIA__c.field-meta.xml
<CustomField>
    <fullName>CU_HRSDIA__c</fullName>
    <label>CU_HRSDIA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>