force-app/main/default/objects/Temporal_Cursos__c/fields/CU_LICFED__c.field-meta.xml
<CustomField>
    <fullName>CU_LICFED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CU_LICFED</label>
    <type>Checkbox</type>
</CustomField>