force-app/main/default/objects/Temporal_Cursos__c/fields/CU_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>CU_LUGAR__c</fullName>
    <label>CU_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>