force-app/main/default/objects/Temporal_Cursos__c/fields/CU_MAXML__c.field-meta.xml
<CustomField>
    <fullName>CU_MAXML__c</fullName>
    <label>CU_MAXML</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>