force-app/main/default/objects/Temporal_Cursos__c/fields/CU_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>CU_NOMBRE__c</fullName>
    <label>CU_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>