force-app/main/default/objects/Temporal_Cursos__c/fields/CU_OBLICU__c.field-meta.xml
<CustomField>
    <fullName>CU_OBLICU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CU_OBLICU</label>
    <type>Checkbox</type>
</CustomField>