force-app/main/default/objects/Temporal_Cursos__c/fields/CU_VANO__c.field-meta.xml
<CustomField>
    <fullName>CU_VANO__c</fullName>
    <label>CU_VANO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>