force-app/main/default/objects/Temporal_Cursos__c/fields/CU_VCURSO__c.field-meta.xml
<CustomField>
    <fullName>CU_VCURSO__c</fullName>
    <label>CU_VCURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>