force-app/main/default/objects/Temporal_Cursos__c/fields/CU_WEB__c.field-meta.xml
<CustomField>
    <fullName>CU_WEB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CU_WEB</label>
    <type>Checkbox</type>
</CustomField>