force-app/main/default/objects/Temporal_Cursos__c/fields/Descripcion_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Error__c</fullName>
    <label>Descripcion Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>