force-app/main/default/objects/Temporal_Cursos__c/fields/DOC_PENDIENTES__c.field-meta.xml
<CustomField>
    <fullName>DOC_PENDIENTES__c</fullName>
    <label>DOC_PENDIENTES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>