force-app/main/default/objects/Temporal_Cursos__c/fields/Fecha_Ultima_Carga__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Carga__c</fullName>
    <label>Fecha Ultima Carga</label>
    <type>DateTime</type>
</CustomField>