force-app/main/default/objects/Temporal_Cursos__c/fields/NUM_DOCS__c.field-meta.xml
<CustomField>
    <fullName>NUM_DOCS__c</fullName>
    <label>NUM_DOCS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>