force-app/main/default/objects/Temporal_Cursos__c/fields/NUM_NIVELES__c.field-meta.xml
<CustomField>
    <fullName>NUM_NIVELES__c</fullName>
    <label>NUM_NIVELES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>