force-app/main/default/objects/Temporal_Cursos__c/fields/salesforce_lugar_id__c.field-meta.xml
<CustomField>
    <fullName>salesforce_lugar_id__c</fullName>
    <label>salesforce_lugar_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>