force-app/main/default/objects/Temporal_Cursos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CU_ANO__c</columns>
    <columns>CU_CURSO__c</columns>
    <columns>CU_LUGAR__c</columns>
    <columns>DDDKEY__c</columns>
    <columns>P_DDDKEY__c</columns>
    <columns>Estado_c__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Descripcion_Error__c</columns>
    <columns>Benefit__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>